catch logcat output to file for non-Testfairy builds